--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,31 @@
     padding:0px;
     box-sizing: border-box;
 }
+body{
+    display:flex;
+    justify-content: center;
+    background-color: whitesmoke;
+    flex-direction: column;
+    align-items: center;
+}
+.title{
+    font-size: 48px;
+    font-weight: 900;
+
+}
+.grid_square{
+
+    border:1px solid black;
+}
+.grid-container{
+    display:flex;
+    width:400px;
+    height:400px;
+    flex-wrap: wrap;
+}
+button{
+    border-radius: 9px;
+    width:100px;
+    height:20px;
+    margin-bottom: 10px;
+}
